--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/native-stack": "^6.9.1",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-splash-screen": "^3.3.0",
     "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
